# repo-6652-matrix-rust-sdk

./: .typos.toml  Cargo.toml  help.html  index.html  search-index.js  settings.html
matrix_sdk/: all.html  attr.async_trait.html  enum.ClientBuildError.html  enum.DisplayName.html  enum.Error.html  enum.HttpError.html  enum.ImageError.html  enum.LoopCtrl.html  enum.RefreshTokenError.html  enum.RoomType.html  enum.RumaApiError.html  enum.StoreError.html  index.html  sidebar-items.js  struct.Account.html  struct.BaseRoom.html  struct.BaseRoomMember.html  struct.Client.html  struct.ClientBuilder.html  struct.LoginBuilder.html  struct.RoomInfo.html  struct.Session.html  struct.SsoLoginBuilder.html  struct.StateChanges.html  trait.AsyncTraitDeps.html  trait.HttpSend.html  trait.SendOutsideWasm.html  trait.SyncOutsideWasm.html  type.HttpResult.html  type.Result.html
matrix_sdk_appservice/: all.html  enum.Error.html  index.html  struct.AppService.html  struct.AppServiceBuilder.html  struct.AppServiceRouter.html  type.Result.html
matrix_sdk_base/: all.html  enum.DisplayName.html  enum.Error.html  enum.MinimalStateEvent.html  enum.RoomType.html  index.html  struct.BaseClient.html  struct.OriginalMinimalStateEvent.html  struct.RedactedMinimalStateEvent.html  struct.Room.html  struct.RoomInfo.html  struct.RoomMember.html  struct.Session.html  struct.SessionMeta.html  struct.SessionTokens.html  trait.AsyncTraitDeps.html  trait.SendOutsideWasm.html  trait.SyncOutsideWasm.html  type.MinimalRoomMemberEvent.html  type.Result.html
matrix_sdk_common/: all.html  index.html  trait.AsyncTraitDeps.html  trait.SendOutsideWasm.html  trait.SyncOutsideWasm.html
matrix_sdk_crypto/: all.html  enum.DecryptorError.html  enum.EventError.html  enum.KeyExportError.html  enum.LocalTrust.html  enum.MegolmError.html  enum.OlmError.html  enum.QrVerificationState.html  enum.ReadOnlyUserIdentities.html  enum.SasState.html  enum.ScanError.html  enum.SecretInfo.html  enum.SessionCreationError.html  enum.SignatureError.html  enum.UserIdentities.html  enum.Verification.html  enum.VerificationRequestState.html  fn.decrypt_room_key_export.html  fn.encrypt_room_key_export.html  fn.format_emojis.html  index.html  struct.AcceptSettings.html  struct.AcceptedProtocols.html  struct.AttachmentDecryptor.html  struct.AttachmentEncryptor.html  struct.CancelInfo.html  struct.CrossSigningStatus.html  struct.Device.html  struct.Emoji.html  struct.EmojiShortAuthString.html  struct.EncryptionSettings.html  struct.GossipRequest.html  struct.MasterPubkey.html  struct.MediaEncryptionInfo.html  struct.OlmMachine.html  struct.OwnUserIdentity.html  struct.QrVerification.html  struct.ReadOnlyAccount.html  struct.ReadOnlyDevice.html  struct.ReadOnlyOwnUserIdentity.html  (+6 more)
matrix_sdk_indexeddb/: all.html  enum.IndexeddbCryptoStoreError.html  enum.IndexeddbStateStoreError.html  enum.MigrationConflictStrategy.html  enum.OpenStoreError.html  fn.make_store_config.html  index.html  struct.IndexeddbCryptoStore.html  struct.IndexeddbStateStore.html  struct.IndexeddbStateStoreBuilder.html
matrix_sdk_qrcode/: all.html  enum.DecodingError.html  enum.EncodingError.html  enum.QrVerificationData.html  index.html  struct.SelfVerificationData.html  struct.SelfVerificationNoMasterKey.html  struct.VerificationData.html
xtask/src/: ci.rs
(+543 files in other folders)
